src/components/ConditionLockMenu/ConditionLockMenu.scss
.react-autoql-condition-lock-menu {
  min-width: 400px !important;
}

.react-autoql-filter-locking-title-container {
  display: inline-block;
  width: 100%;
  padding-top: 4px;
  padding-left: 6px;
  h3 {
    width: 95%;
    float: left;
    color: var(--react-autoql-text-color-primary);
    margin-bottom: 0;
    margin-top: 0;
    display: block;
    font-size: 1.17em !important;
    font-weight: bold;

    span {
      color: var(--react-autoql-accent-color);
    }
  }
  button {
    width: 5%;
    float: right;
    :hover {
      cursor: pointer;
      color: var(--react-autoql-hover-color);
    }
  }
}

#react-autoql-filter-description-id {
  visibility: hidden;
  color: var(--react-autoql-text-color-primary);
  background-color: var(--react-autoql-background-color-secondary);
  border-radius: 5px;
  padding: 2px 6px 2px 6px;
  margin: 4px 10px 4px 10px;
  display: inline-block;
  position: absolute;
  top: 20px;
  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);
  z-index: 999999;

  span {
    color: var(--react-autoql-accent-color);
  }
  p {
    width: 96%;
    float: right;
    margin-bottom: 0;
  }
}

#react-autoql-filter-description-id.show {
  visibility: visible;
  animation: fadeIn 1s;
}

.react-autoql-condition-locking-input {
  padding: 5px;
  padding-left: 20px;
  margin: 8px;
  height: 32px;
  box-sizing: border-box;
  border-radius: 24px;
  font-size: 12px;
  font-family: inherit;
  letter-spacing: 0.04em;
  outline: none !important;
  width: calc(100% - 20px);
  font-family: inherit;

  /* Default styles outside of data messenger */
  border: 1px solid var(--react-autoql-border-color, rgba(0, 0, 0, 0.1));
  background: var(--react-autoql-background-color-primary);
  color: var(--react-autoql-text-color-primary);

  &::placeholder {
    color: rgba(var(--react-autoql-text-color-placeholder), 2) !important;
  }
}

.react-autoql-condition-locking-input:hover {
  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
}

.react-autoql-condition-table {
  min-width: 95%;
  margin: 10px auto;
  table-layout: fixed;
}

.react-autoql-condition-table thead {
  padding-left: 10px;
  display: table-header-group;
}

.react-autoql-condition-table .react-autoql-condition-table-list-item {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  width: 22vw !important;
}

.react-autoql-condition-lock-menu-footer {
  bottom: 0;
  right: 0;

  button {
    float: right;
    margin: 6px !important;
  }
}

.react-autoql-condition-lock-menu-footer {
  bottom: 0;
  right: 0;

  button {
    float: right;
    margin: 6px !important;
  }
}

.react-autoql-accept-conditions-button {
  text-align: right;
  margin-bottom: 12px;
  padding-right: 10px;
  color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.4));
  transition: color 0.1s ease;

  span {
    opacity: 0.8;
    cursor: pointer;
    &:hover {
      opacity: 1;
    }
  }
}

.react-autoql-condition-table td {
  text-align: left;
  padding: 4px;
  margin: 0 10px 0 10px;
  padding-left: 10px;
}

.react-autoql-condition-list {
  padding: 0;
  margin: 0 auto;
  min-height: 182px;
  overflow: none;
}

.react-autoql-condition-list .react-autoql-condition-table thead th {
  position: sticky;
  top: 0;
  z-index: 1;
  text-align: left;
  padding: 4px;
  padding-left: 10px;
  margin: 0 10px 0 10px;
  font-weight: 800;
  width: 22vh;

  span {
    color: var(--react-autoql-accent-color);
    padding: 5px;
  }
}
.react-autoql-condition-list .react-autoql-condition-table tbody {
  display: block;
  overflow-y: scroll;
  max-height: 260px;
  width: 100%;
  flex: 1 1 auto;
}

.react-autoql-condition-list .react-autoql-condition-table tr {
  display: table;
  table-layout: fixed;
  width: 100%;
  box-sizing: border-box;
}

.react-autoql-condition-list-loading-container {
  display: flex;
  height: 180px;
  width: 100%;
  padding: 20px;
  align-items: center;
  justify-content: center;
}

.react-autoql-empty-condition-list {
  text-align: center;
  padding: 20px;
  height: 140px;
  p {
    margin-top: 20px !important;
    vertical-align: middle;
  }
}

.autoql-close-button {
  background-color: inherit;
  border: none;
  text-align: left;
  font-size: 20px;
  margin-top: -20px;
  float: none !important;
  color: inherit;
}

.react-tiny-popover-container {
  background: var(--react-autoql-background-color-primary);
}

.autoql-condition-locking-menu-container .react-autosuggest__container {
  flex-grow: 1;
  display: inline;
  width: 90%;
  height: 100%;
}

.autoql-condition-locking-menu-container
  .react-autosuggest__suggestions-container--open {
  background-color: var(--react-autoql-background-color-primary);
  border: 1px solid var(--react-autoql-border-color);
  color: var(--react-autoql-text-color-primary);
  position: absolute;
  top: unset;
  bottom: unset;
  overflow-y: scroll !important;
  padding-top: 5px;
  padding-bottom: 5px;
  display: block;
  font-family: inherit;
  font-size: 15px;
  font-weight: normal;
  z-index: 2;
  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
  text-align: left;
  border-radius: 4px;
  margin: -8px auto;
  height: auto;
  max-height: 80vh;
  overflow-y: scroll !important;
  transform: translateX(4%);
  width: 92% !important;
}

.autoql-condition-locking-menu-list {
  table-layout: fixed;
  width: 100%;
}

.autoql-condition-locking-menu-container .react-autosuggest__suggestion {
  color: var(--react-autoql-text-color-primary);
}

.autoql-condition-locking-menu-container input::placeholder {
  opacity: 0.5;
}

.autoql-condition-locking-menu-container .react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.autoql-condition-locking-menu-container .react-autosuggest__suggestion {
  cursor: pointer;
  padding: 2px;
  padding-left: 18px;
  letter-spacing: 0.05em;
  line-height: 22.5px;
}

.autoql-condition-locking-menu-container
  .react-autosuggest__suggestion--highlighted {
  background-color: rgba(0, 0, 0, 0.1) !important;
}

.autoql-condition-locking-menu-container .react-autosuggest__section-title {
  padding: 10px 0 0 10px;
  font-size: 12px;
  color: #777;
}

#react-autoql-filter-setting-info-card {
  visibility: hidden;
  color: var(--react-autoql-text-color-primary);
  background-color: var(--react-autoql-background-color-secondary);
  border-radius: 5px;
  padding: 2px 6px 2px 6px;
  margin: 4px 10px 4px 10px;
  display: inline-block;
  position: absolute;
  top: 40px;
  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);
  z-index: 9999;

  span {
    color: var(--react-autoql-accent-color);
  }

  p {
    margin-bottom: 0 !important;
    span {
      color: var(--react-autoql-accent-color);
    }
  }
}

.react-autoql-highlight-row {
  background-color: var(--react-autoql-accent-color);
  color: white;
  animation-name: highlightIn, highlightOut;
  animation-duration: 400ms, 400ms;
  animation-delay: 0ms, 1500ms;
  animation-timing-function: ease-in, ease-out;
  animation-iteration-count: 1, 1;
}

#react-autoql-filter-setting-info-card.show {
  visibility: visible;
  animation: fadeIn 1s;
}

#react-autoql-condition-show-message {
  visibility: hidden;
  min-width: 200px;
  line-height: 1 !important;
  font-size: 14px !important;
  background-color: var(--react-autoql-background-color-secondary);
  text-align: center;
  border-radius: 4px;
  padding: 6px;
  position: fixed;
  top: 20px;
  display: block;
  z-index: 999999999;
  left: 50%;
  transform: translate(-50%, -50%);
  box-shadow: 0 0 12px 1px rgba(0, 0, 0, 0.4);

  span {
    color: var(--react-autoql-accent-color);
  }
}

#react-autoql-condition-show-message.show {
  visibility: visible;
  // -webkit-animation: snackbarFadein 0.5s, snackbarFadeout 0.5s 2.5s;
  animation: snackbarFadein 1s, snackbarFadeout 1s 2s;
}

@keyframes snackbarFadein {
  from {
    top: 0;
    opacity: 0;
  }
  to {
    top: 20px;
    opacity: 1;
  }
}

@keyframes snackbarFadeout {
  from {
    top: 20px;
    opacity: 1;
  }
  to {
    top: 0;
    opacity: 0;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translate3d(0, -20%, 0);
  }
  to {
    opacity: 1;
    transform: translate3d(0, 0, 0);
  }
}

@keyframes highlightOut {
  100% {
    background-color: var(--react-autoql-background-color-primary);
    color: var(--react-autoql-text-color-primary);
  }
  0% {
    background-color: var(--react-autoql-accent-color);
    color: white;
  }
}
@keyframes highlightIn {
  100% {
    background-color: var(--react-autoql-accent-color);
    color: white;
  }
  0% {
    background-color: var(--react-autoql-background-color-primary);
    color: var(--react-autoql-text-color-primary);
  }
}

